--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,6 @@
 = feedback-a-tron
+
+image:https://img.shields.io/badge/license-AGPL--3.0-blue.svg[AGPL-3.0,link="https://www.gnu.org/licenses/agpl-3.0"] image:https://img.shields.io/badge/philosophy-Palimpsest-purple.svg[Palimpsest,link="https://github.com/hyperpolymath/palimpsest-licence"]
 Jonathan D.A. Jewell <jonathan.jewell@gmail.com>
 v1.0.0, 2025-12-11
 :toc: macro
